Added class to handle html parsing using lxml

--- a/helpers/tazz.html
+++ b/helpers/tazz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0"/>
     <meta name="author" content="tazz"/>
-    <meta name="theme-color" content="#ed2603" media="(prefers-color-scheme: light)">
+    <meta name="theme-color" content="#ed2603" media="(prefers-color-scheme: light)">This is a tail
     <meta name="theme-color" content="#ed2603" media="(prefers-color-scheme: dark)">
 
     <title> Restaurante Cluj-Napoca | Comandă mâncare din 453 restaurante</title>
